fixed weierd z-index bs

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -13,6 +13,7 @@
 
 body {
   background:#111;
+  z-index:1;
 }
  
 main {
